workload/a0005-i/web-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  labels:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: web-frontend
    pci-scope: in-scope
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: a0005
      app.kubernetes.io/component: web-frontend
      pci-scope: in-scope
  template:
    metadata:
      labels:
        app.kubernetes.io/name: a0005
        app.kubernetes.io/component: web-frontend
        pci-scope: in-scope
    spec:
      automountServiceAccountToken: false
      serviceAccount: web-frontend-sa
      containers:
      - name: web-frontend
        image: acraksite2hif2xfui4.azurecr.us/live/a0005/chain-api:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          protocol: TCP
          containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 10001
          runAsGroup: 3000
          capabilities:
            drop:
              - all
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
        pci-scope: in-scope
---
kind: Service
apiVersion: v1
metadata:
  name: web-frontend
  labels:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: web-frontend
    pci-scope: in-scope
spec:
  selector:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: web-frontend
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: web
