workload/a0005-i/web-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-frontend
  labels:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: web-frontend
    pci-scope: in-scope
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_ssl_name "web-frontend-sa.a0005-i.cluster.local";
    # nginx.ingress.kubernetes.io/proxy-ssl-secret: kube-system/osm-nginx-client-cert
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - bu0001a0005-00.aks-ingress.contoso.com
  rules:
  - host: bu0001a0005-00.aks-ingress.contoso.com
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: web-frontend
            port:
              number: 8080
# ---
# apiVersion: policy.openservicemesh.io/v1alpha1
# kind: IngressBackend
# metadata:
#   name: web-frontend
#   labels:
#     app.kubernetes.io/name: a0005
#     app.kubernetes.io/component: web-frontend
#     pci-scope: in-scope
# spec:
#   backends:
#   - name: web-frontend
#     port:
#       number: 8080
#       protocol: https
#     tls:
#       skipClientCertValidation: false
#   sources:
#   - kind: Service
#     name: ingress-nginx-controller
#     namespace: ingress-nginx
#   - kind: AuthenticatedPrincipal
#     name: ingress-nginx.ingress-nginx.cluster.local
